# SuperHexagonAI

./: README.md  pyproject.toml
src/superhexagonai/: features.py  game_loop.py  heuristic.py  main.py  patterns.py  util.py
